--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,15 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+
+
+
+    <string name="pref_location_label">Location</string>
+
+        <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
+        <string name="pref_location_key" translatable="false">location</string>
+
+        <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
+        <string name="pref_location_default" translatable="false">Bangalore</string>
+
 </resources>
