--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,15 @@
         <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
         <string name="pref_location_default" translatable="false">Bangalore</string>
 
+    <string name="pref_units_label">Temperature Units</string>
+    <string name="pref_unit_label_metric">Metric</string>
+    <string name="pref_unit_label_imperial">Imperial</string>
+    <string name="pref_units_key" translatable="false">units</string>
+
+        <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
+        <string name="pref_units_metric" translatable="false">metric</string>
+
+        <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
+        <string name="pref_units_imperial" translatable="false">imperial</string>
+
 </resources>
